Bug #190905 --> [MIME] "This body part will be downloaded on demand" fix